apps/acpl-forum/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: acpl-forum-headers
spec:
  headers:
    customResponseHeaders:
      Server: ""
