apps/acpl-forum/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: acpl-forum-service
spec:
  selector:
    app: acpl-forum
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
